[package]
name = "vulkan-tutorial-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_06"] }
#ash = { version = "0.37.3+1.3.251", features = ["linked"] }
#ash-window = "0.12"

ash = { version = "0.38.0+1.3.281", features = ["linked"]}
# ash = { git = "https://github.com/ash-rs/ash", features = ["linked"], rev = "71387e942ff769cfefe824179c70b87e537f05ba" }

thiserror = "1.0.58"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
glam = "0.27.0"
