[package]
name = "vulkan-tutorial-rs"
version = "0.1.0"
authors = ["Marcos Daniel Torres"]
repository = "https://github.com/MarcosDanielTorres/vulkan-tutorial-rs"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
winit = { version = "0.29", features = ["rwh_06"] }
ash = { version = "0.38.0+1.3.281", features = ["linked"]}

thiserror = "1.0.58"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
glam = "0.27.0"
walkdir = "2.0"

image = "0.25"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4"
